
name:               fluent
version:            0.1
cabal-version:      >= 1.10
author:             Hans Hoglund
maintainer:         Hans Hoglund <hans@hanshoglund.se>
license:            BSD3
license-file:       COPYING
synopsis:           To be written
category:           
tested-with:        GHC
build-type:         Simple

description:
    To be written.

source-repository head
    type:               git
    location:           git://github.com/hanshoglund/foobar.git

library
    build-depends:
        base            >= 4 && < 5,
        portaudio       >= 0.2.3 && < 1,
        hsndfile        >= 0.7.1 && < 1,
        hsndfile-vector >= 0.5.2 && < 1,
        vector          >= 0.10.9.1 && < 1,
        hosc            >= 0.14.1 && < 1
    hs-source-dirs:     src
    default-language:   Haskell2010
    exposed-modules:
        Sound.Fluent
